deriving-0.1.1/tests/rejected/infsup.ml
(* < > variant types *)
type poly6 = [< `A > `B]
    deriving (Eq)
